# Prototipo-funcional-en-C-capaz-de-cargar-indexar-y-procesar-datasets-reales-de-Airbnb

./: .gitignore  CMakeLists.txt  README.md  import_paris.bat  run.bat  run_paris.bat
.github/workflows/: cpp.yml
data/pilot/cusco/: listings.csv
data/pilot/lima/: calendar.csv  listings.csv  reviews.csv
docs/: AVANCE_2_GRUPO_03.md  RESULTADOS_PARIS.md  RESULTADOS_PRELIMINARES.md
include/: AirbnbIndex.hpp  CsvReader.hpp  DataLoader.hpp  DirectoryScanner.hpp  GraphAnalytics.hpp  Listing.hpp  RangeAnalytics.hpp
scripts/: extract_gzip_csv.ps1  extract_gzip_sample.ps1
src/: AirbnbIndex.cpp  CsvReader.cpp  DataLoader.cpp  DirectoryScanner.cpp  GraphAnalytics.cpp  RangeAnalytics.cpp  main.cpp
tests/: casos_prueba.md
